--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,21 @@ body{
 
 .box{
     height: 100px;
-    min-width: 100px;
+    width: 320px;
     
 }
 
 .one{
     background: red;
-    flex-grow: 10;
+    flex-shrink: 1;
 }
 
 .two{
     background: blue;
-    flex-grow: 5;
+    flex-shrink: 2;
 }
 
 .three{
     background: green;
-    flex-grow: 1;
+    flex-shrink: 3;
 }
