--- a/css/menu.css
+++ b/css/menu.css
@@ -15,8 +15,9 @@ body{
 
 /* menu base styles */
 
-nav ul{
+nav{
     background: #333;
+    
 }
 
 nav ul{
@@ -36,7 +37,37 @@ nav a:hover{
     background: #555;
 }
 
+/* social menu base styles */
+
+a.tw{
+    background: url(/img/tw.png) no-repeat center;
+    background-size: 80%;
+}
+
+a.fb{
+    background: url(/img/fb.png) no-repeat center;
+    background-size: 80%;
+}
+
+.social a{
+    text-indent: -10000px;
+}
+
+.social{
+    max-width: 80px;
+    margin: 0 auto;
+}
+
 /* flex styles */
+
+nav ul.social{
+    flex: 1 1 0;
+    display: flex;
+}
+
+nav ul.social li{
+    flex: 1 1 0;
+}
 
 @media screen and (min-width: 768px){
 
@@ -47,5 +78,14 @@ nav a:hover{
 
     nav li{
         flex: 1 1 0;
+    }
+
+    nav{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .social{
+        margin: 0;
     }
 }
