--- a/css/style.css
+++ b/css/style.css
@@ -17,25 +17,27 @@ body{
     display: flex;
     background: #fff;
     flex-wrap: wrap;
+    flex-flow: column;
+    justify-content: flex-start;
+    height: 800px;
 }
 
 .box{
     height: 100px;
-    flex: 1;
+    flex: 0 0 200px;
     
 }
 
 .one{
     background: red;
-    flex-basis: 100px;
+   
 }
 
 .two{
     background: blue;
-    flex-basis: 200px;
-}
+}  
 
 .three{
     background: green;
-    flex-basis: 300px;
+;
 }
